@@ -1,5 +1,7 @@
 \name{NEWS}
 \title{News for Package \pkg{finbif}}
+\section{finbif version 0.3.1.9000}{
+}
 \section{finbif version 0.3.1}{
   \subsection{NEW FEATURES}{
     \itemize{
